# hescod-py

./: README.md  __init__.py  core.py  datosAdapt.mat  gui.py  ieee802_16e_matrices.mat  main.py  pyproject.toml  requirements.txt  run_pyqt.py
