[project]
name = "hescod-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.6",
    "numpy>=1.26,<2",
    "pillow>=10.0",
    "pyqt5>=5.15; sys_platform != 'win32'",
    "pyside6==6.7.2; sys_platform == 'win32'",
    "scipy>=1.11",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
]
